--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,10 @@ plugins:
   - jekyll-seo-tag
   
 twitter:
- username: lXlON
+ username: 
  card: summary
 
 social:
-  name: Axel Gueudin
+  name: Chase
   links:
-    - https://twitter.com/lXlON
-    - https://www.linkedin.com/in/axel-gueudin-b8b059121
-    - https://github.com/gueudaxe
-
 
